# GSDK

./: CMakeLists.txt  README.md  run_GSDK_Demo.sh  sdk-doc.md  swarm_dump_35_rtp.264
Example/: main.cpp
Tool/: README.txt  br_fragment  buildroot.config  summary.csv
Tool/aarch64-buildroot-linux-gnu/lib64/: libasan.la  libasan.so.5.0.0  libatomic.la  libatomic.so.1.2.0  libitm.la  libitm.so.1.0.0  liblsan.la  liblsan.so.0.0.0  libstdc++.la  libstdc++.so.6.0.28  libstdc++.so.6.0.28-gdb.py  libstdc++fs.la  libsupc++.la  libtsan.la  libtsan.so.0.0.0  libubsan.la  libubsan.so.1.0.0
Tool/etc/meson/: cross-compilation.conf  cross-compilation.conf.in
Tool/include/: gmp.h
Tool/include/python3.8/: pyconfig.h
Tool/lib/: libcc1.la  libcc1.so.0.0.0  libexpat.la  libexpat.so.1.6.11  libffi.la  libffi.so.7.1.0  libform.so.6.1  libgmp.la  libgmp.so.10.3.2  libltdl.la  libltdl.so.7.3.1  libmenu.so.6.1  libmpc.la  libmpc.so.3.1.0  libmpfr.la  libmpfr.so.6.0.2  libncurses.so.6.1  libpanel.so.6.1  libpkgconf.la  libpkgconf.so.3.0.0  libz.so.1.2.11
Tool/lib/pkgconfig/: expat.pc  libffi.pc  libpkgconf.pc  mpfr.pc  python-3.8-embed.pc  python-3.8.pc  zlib.pc
Tool/lib/python3.8/: _sysconfigdata__linux_x86_64-linux-gnu.py
Tool/libexec/awk/: grcat  pwcat
Tool/share/autoconf/: autom4te.cfg
Tool/share/awk/: group.awk  passwd.awk
Tool/share/buildroot/: sdk-location
cmake/: toolchain-aarch64.cmake
config/: config.json
doc/: GSDK API文档.md
docs/: aarch64-3588-deploy.md
examples/: sdk_basic_example.cpp
include/GsdkManager/: sdkInterface.h  ziyanSdk.h
include/Interface/: AirLineManager.h  JoyStickManager.h  ParamManager.h  PodManager.h  Vehicle_public.h  vehicle.h
include/Vehicle/: MissionProcessor.h
include/framework/common/: uthread.h
lib/: libavdevice.so.61.2.101  libavformat.so.61  libavformat.so.61.6.100  libavutil.so.59  libavutil.so.59.37.100  libswresample.so.5.2.100
lib/aarch64/: libavfilter.so.10  libavfilter.so.10.4.100  libavutil.so.59.39.100  libboost_atomic-mt-a64.so.1.86.0  libboost_charconv-mt-a64.so.1.86.0  libboost_chrono-mt-a64.so.1.86.0  libboost_contract-mt-a64.so.1.86.0  libboost_coroutine-mt-a64.so.1.86.0  libboost_graph-mt-a64.so.1.86.0  libboost_iostreams-mt-a64.so.1.86.0  libboost_log-mt-a64.so.1.86.0  libboost_math_c99-mt-a64.so.1.86.0  libboost_math_tr1f-mt-a64.so.1.86.0  libboost_math_tr1l-mt-a64.so.1.86.0  libboost_nowide-mt-a64.so.1.86.0  libboost_prg_exec_monitor-mt-a64.so.1.86.0  libboost_process-mt-a64.so.1.86.0  libboost_regex-mt-a64.so.1.86.0  libboost_serialization-mt-a64.so.1.86.0  libboost_stacktrace_basic-mt-a64.so.1.86.0  libboost_stacktrace_noop-mt-a64.so.1.86.0  libboost_unit_test_framework-mt-a64.so.1.86.0  libcurl.la  libcurl.so.4.8.0  libpcre2-8.la  libpcre2-8.so.0.14.0  libpcre2-posix.la  libpcre2-posix.so.3.0.6  libpostproc.so.55  libsqlite3.la  libssl.so.3  libtinyxml2.so.11.0.0  libyaml-cpp.so.0.7  libz.so.1  libzip.la  libzip.so.5.0
lib/aarch64/boost/: libboost_container-mt-a64.so.1.86.0  libboost_context-mt-a64.so.1.86.0  libboost_date_time-mt-a64.so.1.86.0  libboost_fiber-mt-a64.so.1.86.0  libboost_filesystem-mt-a64.so.1.86.0  libboost_iostreams.so.1.86.0  libboost_json-mt-a64.so.1.86.0  libboost_locale-mt-a64.so.1.86.0  libboost_log_setup-mt-a64.so.1.86.0  libboost_math_c99f-mt-a64.so.1.86.0  libboost_math_c99l-mt-a64.so.1.86.0  libboost_math_tr1-mt-a64.so.1.86.0  libboost_program_options-mt-a64.so.1.86.0  libboost_random-mt-a64.so.1.86.0  libboost_system-mt-a64.so.1.86.0  libboost_thread-mt-a64.so.1.86.0  libboost_timer-mt-a64.so.1.86.0  libboost_type_erasure-mt-a64.so.1.86.0  libboost_url-mt-a64.so.1.86.0  libboost_wave-mt-a64.so.1.86.0  libboost_wserialization-mt-a64.so.1.86.0
lib/aarch64/event/: libevent-2.1.so.7.0.1  libevent_core-2.1.so.7.0.1  libevent_extra-2.1.so.7.0.1  libevent_pthreads-2.1.so.7.0.1
lib/aarch64/ffmpeg/: libavdevice.so.61.3.100  libavformat.so.61  libavformat.so.61.7.100  libswresample.so.5.3.100  libswscale.so.8.3.100
lib/x86/: libOpenThreads.so.3.3.1  libavcodec.so.61  libavdevice.so.61.3.100  libavformat.so.61.7.100  libavutil.so.59.39.100  libboost_atomic.so.1.86.0  libboost_chrono.so.1.86.0  libboost_container.so.1.86.0  libboost_context.so.1.86.0  libboost_contract.so.1.86.0  libboost_fiber.so.1.86.0  libboost_filesystem.so.1.86.0  libboost_graph.so.1.86.0  libboost_json.so.1.86.0  libboost_log.so.1.86.0  libboost_log_setup.so.1.86.0  libboost_numpy310.so.1.86.0  libboost_python310.so.1.86.0  libboost_random.so.1.86.0  libboost_regex.so.1.86.0  libboost_stacktrace_addr2line.so.1.86.0  libboost_stacktrace_backtrace.so.1.86.0  libboost_stacktrace_basic.so.1.86.0  libboost_stacktrace_from_exception.so.1.86.0  libboost_stacktrace_noop.so.1.86.0  libboost_thread.so.1.86.0  libboost_timer.so.1.86.0  libboost_type_erasure.so.1.86.0  libboost_wave.so.1.86.0  libevent-2.1.so.7.0.1  libevent_core-2.1.so.7.0.1  libevent_extra-2.1.so.7.0.1  libevent_pthreads-2.1.so.7.0.1  libosgGA.so.3.6.5  libosgManipulator.so~develop  libosgPresentation.so~develop  libosgText.so~develop  libosgViewer.so.3.6.5  libosgVolume.so.161  libosgWidget.so.3.6.5  (+3 more)
lib/x86/3rd/: libtiff.so.5
lib/x86/OSG365/: libosgAnimation.so.161~develop  libosgDB.so~develop  libosgFX.so.161~develop  libosgParticle.so~develop  libosgShadow.so.161  libosgSim.so.161  libosgTerrain.so~develop  libosgUI.so.161~develop  libosgUtil.so.161~develop
lib/x86/boost/: libboost_charconv.so.1.86.0  libboost_coroutine.so.1.86.0  libboost_date_time.so.1.86.0  libboost_iostreams.so.1.86.0  libboost_locale.so.1.86.0  libboost_nowide.so.1.86.0  libboost_prg_exec_monitor.so.1.86.0  libboost_process.so.1.86.0  libboost_program_options.so.1.86.0  libboost_serialization.so.1.86.0  libboost_system.so.1.86.0  libboost_unit_test_framework.so.1.86.0  libboost_url.so.1.86.0  libboost_wserialization.so.1.86.0
lib/x86/cmake/: pcre2-config-version.cmake
lib/x86/datachannel/: libdatachannel.so.0.21.1
lib/x86/event/: libevent-2.1.so.7.0.1  libevent_core-2.1.so.7.0.1  libevent_extra-2.1.so.7.0.1  (+1 more)
scripts/: build_gsdk_example.sh  package_aarch64_deploy.sh
(+611 files in other folders)
